HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureParamInference/Source/Main.uv
//! Rejected closure specimen for missing parameter inference context.

public procedure closureParamInferenceReference() -> i32 {
    let identity = |value| value
    return identity(1)
}
